[tool.poetry]
name = "blood-cancer-detection-yolov5"
version = "0.1.0"
description = "A simple project to experiment with YOLOv5 in the context of cancer detection"
authors = ["Maruf Bepary <bepary71@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
pillow = "^10.2.0"
PyYAML = "^6.0.1"
requests = "^2.31.0"
scipy = "^1.12.0"
torch = "^2.2.1"
torchvision = "^0.17.1"
tqdm = "^4.66.2"
tensorboard = "^2.16.2"
pandas = "seaborn"
seaborn = "^0.13.2"
thop = "^0.1.1.post2209072238"
wandb = "^0.16.4"
coremltools = "^7.1"
onnx = "^1.15.0"
onnx-simplifier = "^0.4.36"
scikit-learn = "^1.4.1.post1"
tensorflow = "^2.15.0.post1"
tensorflowjs = "^4.17.0"
albumentations = "^1.4.1"
pycocotools = "^2.0.7"
roboflow = "^1.1.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
